[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "spraybus"
version = "0.1.0"
description = "Asyncio Python client for spraybus"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Unlicense" }
authors = [{ name = "spraybus contributors" }]

[tool.scikit-build]
cmake.source-dir = ".."
wheel.packages = ["src/spraybus"]
cmake.build-type = "Release"

[tool.scikit-build.cmake.define]
SPRAYBUS_BUILD_SERVER = "OFF"
SPRAYBUS_BUILD_APPS = "OFF"
SPRAYBUS_BUILD_PYTHON = "ON"
SPRAYBUS_INSTALL_CLIENT = "OFF"
